# creature

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitlab-ci .yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  battler.json  deps.sh  docker-compose.yml  element.json  enum_array.json  git.subtree.sh  gittree.sh  install-deps.sh  timer.json  tools.makedata.cmake  travis.sh
backend/: .gitignore  CMakeLists.txt
backend/benchmark/: CMakeLists.txt  dateutilBenchmark.cpp  entityxBenchmark.cpp  enum_arrayBenchmark.cpp  miscBenchmark.cpp  utilBenchmark.cpp
backend/benchmark/Application/: GameApplicationBenchmark.cpp
backend/benchmark/Component/Game/: CreatureMemoryBenchmark.cpp  CreatureMemoryEnumArrayBenchmark.cpp  CreatureMemoryVectorBenchmark.cpp
backend/benchmark/Entity/Game/: CreatureCreatorBenchmark.cpp  CreatureEntityCreatorBenchmark.cpp
backend/include/: basic.h  clamp.hpp  dateutil.h  enum.h  enum_array.h  std14.hpp  util.h
backend/include/Application/: GameApplication.h
backend/include/Component/: Basic.h  DateTimer.h  Types.h
backend/include/Component/Game/: Basic.h  Battler.h  Creature.h  CreatureBattler.h  CreatureBattlerGene.h  CreatureGene.h  CreatureMemory.h  CreatureProgressTimers.h  EvolutionTrakingInfos.h  ProgressTimer.h  ProgressTimerCallback.h  ProgressTimerIncrement.h  Types.h
backend/include/Data/: BaseModel.h  Basic.h  Battler.h  BattlerStatus.h  Creature.h  CreatureBattlerStatus.h  CreatureImage.h  CreatureType.h  Food.h  Item.h  Skill.h  Timer.h  Types.h  UseItem.h
backend/include/Entity/: EntityCreator.h  EntityCreatorInterface.h
backend/include/Entity/Data/: DataManager.h  DataManagerBase.h
backend/include/Entity/Game/: CreatureBattlerCreator.h  CreatureCreator.h  CreatureEntityCreator.h  CreatureFootPrintCreator.h  DateTimerUtil.h  Entitys.h  ProgressTimerUtil.h  TimerUtil.h
backend/include/System/: Application.h  Events.h  System.h
backend/include/System/Event/: CreatureBattlerSystemEvents.h  CreatureDigestionSystemEvents.h  CreatureEvolutionSystemEvents.h  CreatureProgressTimerSystemEvents.h  CreatureSystemEvents.h
backend/include/System/Game/: CreatureAddStatusListener.h  CreatureAddStatusSystem.h  CreatureBattlerAddBattlerStatusListener.h  CreatureBattlerAddBattlerStatusSystem.h  CreatureBattlerCreatureAddExpListener.h  CreatureBattlerCreatureAddExpSystem.h  CreatureBattlerCreatureRecoverListener.h  CreatureBattlerCreatureRecoverSystem.h  CreatureBattlerRemoveBattlerStatusListener.h  CreatureBattlerRemoveBattlerStatusSystem.h  CreatureBattlerSystem.h  CreatureBornListener.h  CreatureDeadSystem.h  CreatureDigestionCallbackListener.h  CreatureDigestionCallbackSystem.h  CreatureDigestionSystem.h  CreatureDoNotingSystem.h  CreatureEvolveListener.h  CreatureGrowingIncrementListener.h  CreatureGrowingSystem.h  CreatureMakeDeadListener.h  CreatureMakeRunAwayListener.h  CreatureMakeRunAwaySystem.h  CreatureProgressTimerSystem.h  CreatureRemoveRunAwayListener.h  CreatureRemoveRunAwaySystem.h  CreatureRemoveStatusListener.h  CreatureRemoveStatusSystem.h  CreatureRunAwaySystem.h  CreatureSystem.h  CreatureSystemCallbackListener.h  CreatureTryToEvolveListener.h
backend/include/benchpress/: benchpress.hpp
backend/include/cereal/types/: array_fixed.hpp  unordered_map_string.hpp
backend/lib/entt/: CMakeLists.txt
backend/lib/eventpp/: CMakeLists.txt
backend/src/: CMakeLists.txt  basic.h  dateutil.cpp  enum_array.cpp  enum_array.h  util.cpp
backend/src/Application/: GameApplication.cpp
backend/src/Component/: Basic.cpp  Basic.h  DateTimer.cpp  DateTimer.h
backend/src/Component/Game/: Basic.cpp  Battler.cpp  Battler.h  Creature.cpp  Creature.h  CreatureBattler.cpp  CreatureBattler.h  CreatureBattlerGene.cpp  CreatureBattlerGene.h  CreatureGene.h  CreatureMemory.cpp  CreatureMemory.h  CreatureProgressTimers.cpp  CreatureProgressTimers.h  EvolutionTrakingInfos.cpp  ProgressTimer.cpp  ProgressTimer.h  ProgressTimerCallback.cpp  (+1 more)
backend/src/Data/: BaseModel.cpp  BaseModel.h  Basic.cpp  Battler.cpp  Battler.h  BattlerStatus.cpp  BattlerStatus.h  Creature.cpp  Creature.h  CreatureAnimationImage.cpp  CreatureAnimationImage.h  CreatureBattlerStatus.cpp  CreatureBattlerStatus.h  CreatureImage.cpp  CreatureImage.h  CreatureType.cpp  Element.cpp  Element.h  Food.cpp  Food.h  Item.cpp  Item.h  Skill.cpp  Skill.h  Timer.cpp  Timer.h  UseItem.cpp  UseItem.h
backend/src/Entity/: EntityCreator.cpp  EntityCreatorInterface.h
backend/src/System/: Events.cpp
backend/test/: CMakeLists.txt  basicDateutilTest.cpp  basicEnumSerialTest.cpp  basicEnumTest.cpp  basicTest_iszero.cpp  basicTest_random.cpp  mainTest.cpp
backend/test/Application/: GameApplicationTest.cpp
backend/test/Data/: BattlerSerialTest.cpp  ElementSerialTest.cpp  TimerSerialTest.cpp  TimerTest.cpp
mainapp/: CMakeLists.txt
mainapp/benchmark/: dateBenchmark.cpp  enum_arrayBenchmark.cpp  utilBenchmark.cpp
mainapp/include/: enum.h
mainapp/include/benchpress/: cxxopts.hpp
mainapp/include/better-enums/: n4428.h
mainapp/src/: basic.hpp  date.cpp  date.hpp  dateutil.h  enum_array.cpp  enum_array.h  enum_array.hpp  util.cpp  util.h  util.hpp
mainapp/src/Data/: BaseModel.cpp  BaseModel.h  BaseModel.hpp  Basic.h  Basic.hpp  Battler.cpp  Battler.h  Battler.hpp  BattlerStatus.cpp  BattlerStatus.h  BattlerStatus.hpp  Creature.cpp  Creature.h  Creature.hpp  CreatureAnimationImage.cpp  CreatureAnimationImage.hpp  CreatureBattlerStatus.cpp  CreatureBattlerStatus.hpp  CreatureImage.cpp  CreatureImage.hpp  CreatureType.cpp  CreatureType.h  CreatureType.hpp  Element.cpp  Element.hpp  Food.cpp  Food.h  Food.hpp  Item.cpp  Item.hpp  Skill.cpp  Skill.h  Skill.hpp  Timer.cpp  Timer.h  Timer.hpp  UseItem.cpp  UseItem.h  UseItem.hpp
mainapp/test/: basicDateTest.cpp  basicDateutilTest.cpp  basicEnumTest.cpp  basicTest_iszero.cpp  basicTest_random.cpp
tools/makedata/: CMakeLists.txt
tools/makedata/include/: InitData.h
tools/makedata/src/: InitData.cpp  InitData_creature1.cpp  InitData_creature2.cpp  InitData_creature_basic.cpp  main.cpp
(+126 files in other folders)
