
###
## 3rd libs
###
set(TOOLS_MAKEDATA_LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)

add_subdirectory(${TOOLS_MAKEDATA_LIB_PATH}/cxxopts)

###
## Source/Header Files
###
set(TOOLS_MAKEDATA_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(TOOLS_MAKEDATA_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB_RECURSE TOOLS_MAKEDATA_SRC ${TOOLS_MAKEDATA_SRC_PATH}/*.cpp ${TOOLS_MAKEDATA_SRC_PATH}/*.cxx ${TOOLS_MAKEDATA_SRC_PATH}/*.cc)
file(GLOB_RECURSE TOOLS_MAKEDATA_HEADERS ${TOOLS_MAKEDATA_SRC_PATH}/*.h ${TOOLS_MAKEDATA_SRC_PATH}/*.hpp ${TOOLS_MAKEDATA_SRC_PATH}/*.hxx)


set(TOOLS_MAKEDATA_SRC_PATH ${TOOLS_MAKEDATA_SRC_PATH} PARENT_SCOPE)
set(TOOLS_MAKEDATA_INCLUDE_PATH ${TOOLS_MAKEDATA_INCLUDE_PATH} PARENT_SCOPE)

set(TOOLS_MAKEDATA_SRC ${TOOLS_MAKEDATA_SRC} PARENT_SCOPE)
set(TOOLS_MAKEDATA_HEADERS ${TOOLS_MAKEDATA_HEADERS} PARENT_SCOPE)